feat: move route métier + typing + tsoa (#435)
