# server/src/http/controllers/metiers/type.ts
@@ -1,0 +1,5 @@
+import { IAppellationsRomes, IMetiers, IMetiersEnrichis } from "../../../services/metiers.service.types.js"
+
+export type TGetMetiersResponseSuccess = IMetiers
+export type TGetMetiersEnrichisResponseSuccess = IMetiersEnrichis
+export type TGetAppellationsRomesResponseSuccess = IAppellationsRomes
