# server/src/http/controllers/shared.types.ts
@@ -1,0 +1,4 @@
+export type TResponseError = {
+  error: boolean
+  message: string
+}
