# server/src/service/romesFromCatalogue.ts
@@ -1,83 +1,0 @@
-// @ts-nocheck
-import _ from "lodash-es"
-import { getElasticInstance } from "../common/esClient/index.js"
-import { sentryCaptureException } from "../common/utils/sentryUtils.js"
-
-const esClient = getElasticInstance()
-
-const getRomesFromCatalogue = async ({ cfd, siret }: { cfd?: string; siret?: string }) => {
-  try {
-    const mustTerm = []
-
-    if (cfd) {
-      mustTerm.push({
-        match: {
-          cfd,
-        },
-      })
-    }
-
-    if (siret) {
-      mustTerm.push({
-        match: {
-          etablissement_formateur_siret: siret,
-        },
-      })
-    }
-
-    const esQueryIndexFragment = getFormationEsQueryIndexFragment()
-
-    const responseFormations = await esClient.search({
-      ...esQueryIndexFragment,
-      body: {
-        query: {
-          bool: {
-            must: mustTerm,
-          },
-        },
-      },
-    })
-
-    //throw new Error("BOOM");
-    let romes = []
-
-    responseFormations.body.hits.hits.forEach((formation) => {
-      romes = romes.concat(formation._source.rome_codes)
-    })
-
-    const result = { romes: romes }
-
-    if (!romes.length) {
-      result.error = "No training found"
-    }
-
-    return result
-  } catch (err) {
-    const error_msg = _.get(err, "meta.body", err.message)
-    console.error("Error getting trainings from romes ", error_msg)
-    if (_.get(err, "meta.meta.connection.status") === "dead") {
-      console.error("Elastic search is down or unreachable")
-    }
-    sentryCaptureException(err)
-
-    return { romes: [], error: error_msg, message: error_msg }
-  }
-}
-
-const getRomesFromCfd = ({ cfd }) => {
-  return getRomesFromCatalogue({ cfd })
-}
-
-const getRomesFromSiret = ({ siret }) => {
-  return getRomesFromCatalogue({ siret })
-}
-
-const getFormationEsQueryIndexFragment = () => {
-  return {
-    index: "formationcatalogues",
-    size: 1000,
-    _source_includes: ["rome_codes"],
-  }
-}
-
-export { getRomesFromCfd, getRomesFromSiret }
